dark mode bugs fixes

--- a/src/App.css
+++ b/src/App.css
@@ -95,3 +95,7 @@
 .accordion-button::after {
   filter: invert(1);
 }
+
+.drop-hover-country:hover {
+  color: black !important;
+}
